--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
   <tr>
     <td>Jesus Birth</td>
     <td class="play-cell">
-      <a href="https://youtu.be/IfBWVMa9ZoI?si=8f2RTJwR98I4tTvp" class="play-btn">▶</a>
+      <a href="https://youtu.be/IfBWVMa9ZoI?si=8f2RTJwR98I4tTvp" target="_blank" class="play-btn">▶</a>
     </td>
   </tr>
 
@@ -138,5 +138,6 @@
 
 </body>
 </html>
+
 
 
