--- a/index.html
+++ b/index.html
@@ -115,9 +115,9 @@
   </tr>
 
   <tr>
-    <td>Video Title 2</td>
+    <td>Fathers Death Anniversary</td>
     <td class="play-cell">
-      <a href="videos/video2.mp4" class="play-btn">▶</a>
+      <a href="https://youtube.com/shorts/nhFZUG9FGpY" target="_blank" class="play-btn">▶</a>
     </td>
   </tr>
 
@@ -138,6 +138,7 @@
 
 </body>
 </html>
+
 
 
 
