--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Jebin Video</title>
+<title>JebinEvelinTirshatha</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
@@ -138,6 +138,7 @@
 
 </body>
 </html>
+
 
 
 
