--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
   <div class="logo">
     <img src="1.png" alt="Logo">
   </div>
-  <div class="title">Jebin Video</div>
+  <div class="title">Jerusalem The City of Peace</div>
 </div>
 
 <!-- VIDEO LIST -->
@@ -138,6 +138,7 @@
 
 </body>
 </html>
+
 
 
 
