--- a/index.html
+++ b/index.html
@@ -107,6 +107,13 @@
 
 <!-- VIDEO LIST -->
 <table>
+   <tr>
+    <td>Christmas Greetings 2025</td>
+    <td class="play-cell">
+      <a href="https://youtube.com/shorts/kMgRzfLQtfw" target="_blank" class="play-btn">▶</a>
+    </td>
+  </tr>
+  
   <tr>
     <td>Jesus Birth</td>
     <td class="play-cell">
@@ -121,12 +128,7 @@
     </td>
   </tr>
 
-  <tr>
-    <td>Video Title 3</td>
-    <td class="play-cell">
-      <a href="videos/video3.mp4" class="play-btn">▶</a>
-    </td>
-  </tr>
+
 
   <tr>
     <td>Video Title 4</td>
@@ -138,6 +140,7 @@
 
 </body>
 </html>
+
 
 
 
