--- a/index.html
+++ b/index.html
@@ -107,7 +107,15 @@
 
 <!-- VIDEO LIST -->
 <table>
+
    <tr>
+    <td>Foods in the Bible</td>
+    <td class="play-cell">
+      <a href="https://youtube.com/shorts/dP_3v9tCgb0" target="_blank" class="play-btn">▶</a>
+    </td>
+  </tr>
+  
+  <tr>
     <td>Christmas Greetings 2025</td>
     <td class="play-cell">
       <a href="https://youtube.com/shorts/kMgRzfLQtfw" target="_blank" class="play-btn">▶</a>
@@ -140,6 +148,7 @@
 
 </body>
 </html>
+
 
 
 
