--- a/index.html
+++ b/index.html
@@ -108,6 +108,13 @@
 <!-- VIDEO LIST -->
 <table>
 
+     <tr>
+    <td>Barley Bread</td>
+    <td class="play-cell">
+      <a href="https://youtube.com/shorts/4X_GfvZ2Q38" target="_blank" class="play-btn">▶</a>
+    </td>
+  </tr>
+  
    <tr>
     <td>Foods in the Bible</td>
     <td class="play-cell">
@@ -148,6 +155,7 @@
 
 </body>
 </html>
+
 
 
 
