--- a/index.html
+++ b/index.html
@@ -129,7 +129,13 @@
 <!-- VIDEO LIST -->
 <table>
 
-     <tr>
+    <tr>
+    <td>Day of Lights</td>
+    <td class="play-cell">
+      <a href="https://youtube.com/shorts/VLkgJpZrajo" target="_blank" class="play-btn">▶</a>
+    </td>
+  
+  <tr>
     <td>Ponmudi Hills</td>
     <td class="play-cell">
       <a href="https://youtube.com/shorts/gjKXTCt8Azc" target="_blank" class="play-btn">▶</a>
@@ -208,6 +214,7 @@
   
 </body>
 </html>
+
 
 
 
