--- a/index.html
+++ b/index.html
@@ -103,6 +103,10 @@
     .title {
       font-size: 26px;
     }
+
+      body {
+    padding-top: 95px;   /* just add this */
+  }
 }
 
     td {
@@ -210,6 +214,7 @@
   
 </body>
 </html>
+
 
 
 
