--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
   <div class="logo">
     <img src="1.png" alt="Logo">
   </div>
-  <div class="title">Jerusalem The City of Peace</div>
+  <div class="title">City of Peace</div>
 </div>
 
 <!-- VIDEO LIST -->
@@ -214,6 +214,7 @@
   
 </body>
 </html>
+
 
 
 
