--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
   <div class="logo">
     <img src="1.png" alt="Logo">
   </div>
-  <div class="title">City of Truth</div>
+  <div class="title">Jerusalem City of Truth</div>
 </div>
 
 <!-- VIDEO LIST -->
