--- a/index.html
+++ b/index.html
@@ -112,6 +112,39 @@
   letter-spacing: 2px;
 }
 
+#popupOverlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0,0,0,0.6);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+}
+
+#popupBox {
+  background: #ffffff;
+  padding: 20px;
+  width: 300px;
+  text-align: center;
+  border-radius: 10px;
+}
+
+#popupBox h2 {
+  margin-top: 0;
+}
+
+#popupBox button {
+  margin-top: 15px;
+  padding: 8px 20px;
+  background: #08b3ad;
+  color: white;
+  border: none;
+  border-radius: 5px;
+}
 
   /* Mobile */
   @media (max-width: 600px) {
@@ -230,9 +263,17 @@
   });
 </script>
 
+<div id="popupOverlay">
+  <div id="popupBox">
+    <h2>Welcome</h2>
+    <p>Welcome to Jerusalem – City of Truth</p>
+    <button onclick="closePopup()">OK</button>
+  </div>
+</div>
   
 </body>
 </html>
+
 
 
 
