--- a/index.html
+++ b/index.html
@@ -265,8 +265,8 @@
 
 <div id="popupOverlay">
   <div id="popupBox">
-    <h2>Welcome</h2>
-    <p>Welcome to Jerusalem – City of Truth</p>
+    <h2>Jeremiah 33:3</h2>
+    <p>Call unto me, and I will answer thee, and shew thee great and mighty things, which thou knowest not</p>
     <button onclick="closePopup()">OK</button>
   </div>
 </div>
@@ -284,6 +284,7 @@
    
 </body>
 </html>
+
 
 
 
