--- a/index.html
+++ b/index.html
@@ -182,6 +182,12 @@
 <table>
 
     <tr>
+    <td>Fish</td>
+    <td class="play-cell">
+      <a href="https://youtube.com/shorts/bd6P8xQQifw" target="_blank" class="play-btn">▶</a>
+    </td>
+  
+    <tr>
     <td>Day of Lights</td>
     <td class="play-cell">
       <a href="https://youtube.com/shorts/VLkgJpZrajo" target="_blank" class="play-btn">▶</a>
@@ -284,6 +290,7 @@
    
 </body>
 </html>
+
 
 
 
