--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 <title>JebinEvelinTirshatha</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+<link rel="apple-touch-icon" href="1.png">
+<link rel="icon" sizes="32x32" href="1.png">
+<link rel="icon" sizes="16x16" href="1.png">
+  
+  
 <style>
   body {
     margin: 0;
@@ -326,6 +331,7 @@
    
 </body>
 </html>
+
 
 
 
