--- a/index.html
+++ b/index.html
@@ -187,6 +187,13 @@
 <table>
 
   <tr>
+    <td>Republic Day - 2026</td>
+    <td class="play-cell">
+      <a href="https://youtube.com/shorts/c8XqRzzDq8M" class="play-btn">▶</a>
+    </td>
+  </tr>  
+  
+  <tr>
     <td>Happy Pongal</td>
     <td class="play-cell">
       <a href="https://youtube.com/shorts/cV0hOl5f9FY" class="play-btn">▶</a>
@@ -347,6 +354,7 @@
    
 </body>
 </html>
+
 
 
 
