--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
   <tr>
     <td>Republic Day - 2026</td>
     <td class="play-cell">
-      <a href="https://youtube.com/shorts/c8XqRzzDq8M" class="play-btn">▶</a>
+      <a href="https://youtube.com/shorts/31g4oSJKbLw" class="play-btn">▶</a>
     </td>
   </tr>  
   
@@ -354,6 +354,7 @@
    
 </body>
 </html>
+
 
 
 
