--- a/index.html
+++ b/index.html
@@ -189,14 +189,14 @@
   <tr>
     <td>Republic Day - 2026</td>
     <td class="play-cell">
-      <a href="https://youtube.com/shorts/I2ZN1BzAjLg" class="play-btn">▶</a>
+      <a href="https://youtube.com/shorts/I2ZN1BzAjLg" target="_blank" class="play-btn">▶</a>
     </td>
   </tr>  
   
   <tr>
     <td>Happy Pongal</td>
     <td class="play-cell">
-      <a href="https://youtube.com/shorts/cV0hOl5f9FY" class="play-btn">▶</a>
+      <a href="https://youtube.com/shorts/cV0hOl5f9FY" target="_blank" class="play-btn">▶</a>
     </td>
   </tr>
   
@@ -354,6 +354,7 @@
    
 </body>
 </html>
+
 
 
 
