--- a/index.html
+++ b/index.html
@@ -186,6 +186,13 @@
 <!-- VIDEO LIST -->
 <table>
 
+    <tr>
+    <td>Valentines Day Special</td>
+    <td class="play-cell">
+      <a href="https://youtube.com/shorts/DqWRgYkKDrw" target="_blank" class="play-btn">▶</a>
+    </td>
+  </tr>  
+  
   <tr>
     <td>Republic Day - 2026</td>
     <td class="play-cell">
@@ -354,6 +361,7 @@
    
 </body>
 </html>
+
 
 
 
