--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
     <tr>
     <td>Valentines Day Special</td>
     <td class="play-cell">
-      <a href="https://youtube.com/shorts/LSu75SF6UYQ" target="_blank" class="play-btn">▶</a>
+      <a href="https://youtube.com/shorts/ekxqO95bZDs" target="_blank" class="play-btn">▶</a>
     </td>
   </tr>  
   
@@ -361,6 +361,7 @@
    
 </body>
 </html>
+
 
 
 
